--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,14 @@
   box-sizing: border-box;
   font-family: Gotham Rounded, sans-serif;
   font-weight: normal;
+  
 }
 
 body {
   margin: 0;
   padding: 0;
   background: linear-gradient(to right, grey, white);
+  
   }
 
 .span__two {
@@ -29,8 +31,8 @@ body {
   justify-content: center;
   align-content: center;
   min-height: 100vh;
-  grid-template-columns: repeat(4, 100px);
-  grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+  grid-template-columns: repeat(4, 15vw);
+  grid-template-rows: minmax(25vw, auto) repeat(5, 10vw);
 }
 
 /* DISPLAY */
@@ -42,6 +44,8 @@ body {
   justify-content: space-around;
   flex-direction: column;
   padding: 10px;
+  margin-bottom: 25px;
+  padding-right: 50px;
   word-wrap: break-word;
   word-break: break-all;
   }
@@ -53,13 +57,9 @@ body {
 
   .output .operand2 {
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.5rem;    
   }
 
-  .output .operand3 {
-    color: white;
-    font-size: 1;
-  }
 
   /* Number Buttons */
   
@@ -77,4 +77,32 @@ body {
 
 .button:hover {
   background-color: #5d3eff;
+}
+
+@media screen and (max-width: 600px) {
+  .button {
+    cursor: pointer;
+        font-size: 1rem;
+        border: 1px, solid #FFFFFF;
+        outline: none;
+    background-color: #6030b1;
+      padding: 8px 20px;
+      border-radius: 50px;
+      color: white;
+      transition: all 300ms ease;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .button {
+    cursor: pointer;
+        font-size: .5rem;
+        border: 1px, solid #FFFFFF;
+        outline: none;
+    background-color: #6030b1;
+      padding: 8px 20px;
+      border-radius: 50px;
+      color: white;
+      transition: all 300ms ease;
+  }
 }
