--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,9 @@ body {
   justify-content: center;
   align-content: center;
   min-height: 100vh;
-  grid-template-columns: repeat(4, 15vw);
-  grid-template-rows: minmax(25vw, auto) repeat(5, 10vw);
-}
+  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+  }
 
 /* DISPLAY */
 .output {
@@ -80,6 +80,15 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+
+  .calculator__container {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  min-height: 100vh;
+  grid-template-columns: repeat(4, 15vw);
+  grid-template-rows: minmax(25vw, auto) repeat(5, 10vw);
+}
   .button {
     cursor: pointer;
         font-size: 1rem;
@@ -94,6 +103,14 @@ body {
 }
 
 @media screen and (max-width: 375px) {
+  .calculator__container {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  min-height: 100vh;
+  grid-template-columns: repeat(4, 15vw);
+  grid-template-rows: minmax(25vw, auto) repeat(5, 10vw);
+}
   .button {
     cursor: pointer;
         font-size: .5rem;
